bug 1175898 - crash in mozilla::CrossProcessMutex::ShareToProcess(int) r=billm